# scraping-time

./: .gitignore  README.md  notes_scrapy_framework.txt  pyproject.toml
scraping_time/: testing_scrape.py
scraping_time/fotocasa/: extract.csv
scraping_time/fotocasa/db/: crud.py  dbs_creator.py  fotocasa.db
scraping_time/fotocasa/fotocasa/: items.py  middlewares.py  pipelines.py  settings.py
scraping_time/fotocasa/fotocasa/spiders/: fotocasa_spider.py  idealista.py  quotes.py
